@@ -201,7 +201,7 @@ $(document).ready(function(){
         resizable:true,
         modal: false,
         draggable: true,
-        title: "Image",
+        title: $('#trans_image').val(),
         width:window_width - 250,
         height:window_height - 40,
         position:[225, 10],
@@ -216,7 +216,7 @@ $(document).ready(function(){
         resizable:false,
         modal:false,
         draggable:true,
-        title: "Actions",
+        title: $('#trans_actions').val(),
         width:200,
         position:[10, 10],
         dialogClass: "image-editor-controls",
