@@ -1,0 +1,3 @@
+from Products.ImageEditor import imageeditor_message_factory as _
+
+Apply = _(u'Apply')
