@@ -7,6 +7,9 @@ Changelog
 - fix close button in IE issue. Fixes #4
   [vangheem]
 
+- add translations
+  [vangheem]
+
 
 2.1.0 (2012-05-02)
 ------------------
